# cordcast

./: .gitignore  README.md  installer.iss
.github/workflows/: build.yml  release.yml
app/: .metadata  pubspec.yaml
app/lib/: main.dart
app/lib/models/: audio_device.dart  config.dart  guild_config.dart  guild_info.dart
app/lib/providers/: bot_provider.dart  settings_provider.dart
app/lib/services/: app_logger.dart  bot_worker_service.dart  update_service.dart
app/lib/theme/: app_theme.dart
app/lib/widgets/: app_tab_bar.dart  full_width_dropdown.dart  guilds_screen.dart  home_screen.dart  hover_text_field.dart  settings_screen.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
vst/: CMakeLists.txt
vst/Source/: PluginProcessor.cpp  PluginProcessor.h
worker/: AudioService.cs  BotService.cs  CordCastWorker.csproj  Ipc.cs  Logger.cs  Program.cs
worker/Commands/: SlashCommandHandler.cs
worker/Models/: Config.cs  GuildConfig.cs
